--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Snake</title>
+    <script src="game.js" defer type="module"></script>
   </head>
   <body>
     <div id="game-board">1</div>
-    <script src="app.js"></script>
   </body>
 </html>
